@@ -2,6 +2,8 @@ ChangeLog for pommed
 --------------------
 
 version 1.29:
+	- pommed: add support for newer nvidia backlight driver which
+	changed the sysfs layout.
 
 version 1.28:
 	- pommed: added support for the MacBookPro5,3 (15" MacBookPro
